[gd_scene load_steps=4 format=3 uid="uid://bwpq3n0husxu5"]

[ext_resource type="Script" path="res://ui/UIManager.gd" id="1_aqwcd"]
[ext_resource type="PackedScene" uid="uid://dlhw5wggxabc" path="res://ui/InventoryPanel.tscn" id="2_i1h5f"]
[ext_resource type="Script" path="res://ui/StatusBar.gd" id="3_statusbar"]

[node name="UiManager" type="CanvasLayer"]
script = ExtResource("1_aqwcd")

[node name="StatusBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 105.0
grow_horizontal = 2
script = ExtResource("3_statusbar")

[node name="Background" type="Panel" parent="StatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftSection" type="HBoxContainer" parent="StatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2

[node name="BarsContainer" type="HBoxContainer" parent="StatusBar/LeftSection"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="HPContainer" type="HBoxContainer" parent="StatusBar/LeftSection/BarsContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="StatusBar/LeftSection/BarsContainer/HPContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "HP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBar" type="ProgressBar" parent="StatusBar/LeftSection/BarsContainer/HPContainer"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="EXPContainer" type="HBoxContainer" parent="StatusBar/LeftSection/BarsContainer"]
layout_mode = 2

[node name="EXPLabel" type="Label" parent="StatusBar/LeftSection/BarsContainer/EXPContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "EXP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EXPBar" type="ProgressBar" parent="StatusBar/LeftSection/BarsContainer/EXPContainer"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
max_value = 50.0
show_percentage = false

[node name="LevelContainer" type="HBoxContainer" parent="StatusBar/LeftSection/BarsContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="StatusBar/LeftSection/BarsContainer/LevelContainer"]
layout_mode = 2
text = "LEVEL:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelValue" type="Label" parent="StatusBar/LeftSection/BarsContainer/LevelContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryPanel" parent="StatusBar" instance=ExtResource("2_i1h5f")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -234.0
offset_top = 43.0
offset_right = -4.0
offset_bottom = 332.0
grow_horizontal = 0

[node name="ButtonSection" type="HBoxContainer" parent="StatusBar"]
layout_mode = 0
offset_left = 820.0
offset_top = -1.0
offset_right = 950.0
offset_bottom = 39.0

[node name="BtnNav" type="Button" parent="StatusBar/ButtonSection"]
layout_mode = 2
text = "NAV"

[node name="NavMenu" type="PopupMenu" parent="StatusBar/ButtonSection/BtnNav"]
item_count = 2
item_0/text = "key"
item_0/id = 0
item_1/text = "exit door"
item_1/id = 1

[node name="BtnInventory" type="Button" parent="StatusBar/ButtonSection"]
layout_mode = 2
text = "INV"

[node name="BtnMap" type="Button" parent="StatusBar/ButtonSection"]
layout_mode = 2
text = "MAP"
